--- a/edha-backend/src/main/resources/application.properties
+++ b/edha-backend/src/main/resources/application.properties
@@ -3,24 +3,23 @@ server.port=7779
 spring.h2.console.enabled=true
 spring.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.datasource.hikari.connection-init-sql=SET TIME ZONE 'Asia/Kolkata'
 
 #DB - Dev Config
-#spring.datasource.platform=h2
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.url=jdbc:h2:mem:~/DB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.platform=h2
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:~/DB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #DB- Prod Config
-spring.datasource.platform=postgresql
-spring.datasource.username=${EDHA_DB_USER}
-spring.datasource.password=${EDHA_DB_PASSWORD}
-spring.datasource.url=${EDHA_DATABASE_URL}
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
+#spring.datasource.platform=postgresql
+#spring.datasource.username=${EDHA_DB_USER}
+#spring.datasource.password=${EDHA_DB_PASSWORD}
+#spring.datasource.url=${EDHA_DATABASE_URL}
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.generate-ddl=true
 
 
 #Mail Config
